infra/k8s/post.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
  labels:
    app: posts
spec:
  containers:
    - name: posts
      image: blessyaf/posts:0.0.1
