infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
  labels:
    app: client-bus
spec:
  replicas: 1
  template:
    metadata:
      name: client-depl
      labels:
        app: client
    spec:
      containers:
        - name: client-depl
          image: blessayaf/client
      restartPolicy: Always
  selector:
    matchLabels:
      app: client

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - port: 3000
      name: client
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
