infra/k8s/events-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-bus-depl
  labels:
    app: events-bus
spec:
  replicas: 1
  template:
    metadata:
      name: events-bus-depl
      labels:
        app: events-bus
    spec:
      containers:
        - name: events-bus-depl
          image: blessayaf/events-bus
      restartPolicy: Always
  selector:
    matchLabels:
      app: events-bus

---
apiVersion: v1
kind: Service
metadata:
  name: events-bus-srv
spec:
  selector:
    app: events-bus
  ports:
    - port: 4005
      name: events-bus
      protocol: TCP
      targetPort: 4005
  type: ClusterIP
