infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
  labels:
    app: moderation
spec:
  replicas: 1
  template:
    metadata:
      name: moderation-depl
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation-depl
          image: blessayaf/moderation
      restartPolicy: Always
  selector:
    matchLabels:
      app: moderation

---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - port: 4003
      name: moderation
      protocol: TCP
      targetPort: 4003
  type: ClusterIP
