infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
  labels:
    app: posts
spec:
  replicas: 1
  template:
    metadata:
      name: posts-depl
      labels:
        app: posts
    spec:
      containers:
        - name: posts-depl
          image: blessayaf/posts
      restartPolicy: Always
  selector:
    matchLabels:
      app: posts

---
apiVersion: v1
kind: Service
metadata:
  name: post-clusterip-srv
spec:
  selector:
    app: posts
  ports:
    - port: 4000
      name: posts
      protocol: TCP
      targetPort: 4000
